--- a/Includes/Bibliography/_ref_2002.bib
+++ b/Includes/Bibliography/_ref_2002.bib
@@ -39,3 +39,14 @@
   pages={3723},
   year={2002}
 }
+
+@article{frenklach2002method,
+  title={Method of moments with interpolative closure},
+  author={Frenklach, Michael},
+  journal={Chemical Engineering Science},
+  volume={57},
+  number={12},
+  pages={2229--2239},
+  year={2002},
+  publisher={Elsevier}
+}
