--- a/Includes/Bibliography/_ref_2022.bib
+++ b/Includes/Bibliography/_ref_2022.bib
@@ -58,3 +58,14 @@
  year={2022},
  publisher={Elsevier}
 }
+
+@article{shepherd2022measurement,
+  title={Measurement of gas-phase OH radical oxidation and film thickness of organic films at the air--water interface using material extracted from urban, remote and wood smoke aerosol},
+  author={Shepherd, Rosalie H and King, Martin D and Rennie, Adrian R and Ward, Andrew D and Frey, Markus M and Brough, Neil and Eveson, Joshua and Del Vento, Sabino and Milsom, Adam and Pfrang, Christian and others},
+  journal={Environmental Science: Atmospheres},
+  volume={2},
+  number={4},
+  pages={574--590},
+  year={2022},
+  publisher={Royal Society of Chemistry}
+}
