--- a/Includes/Bibliography/_ref_2023.bib
+++ b/Includes/Bibliography/_ref_2023.bib
@@ -77,3 +77,14 @@
   url     = "https://web.stanford.edu/group/haiwanglab/FFCM2",
   year    = {2023},
 }
+
+
+@article{ramalli2023automatic,
+  title={Automatic validation and analysis of predictive models by means of big data and data science},
+  author={Ramalli, Edoardo and Dinelli, Timoteo and Nobili, Andrea and Stagni, Alessandro and Pernici, Barbara and Faravelli, Tiziano},
+  journal={Chemical Engineering Journal},
+  volume={454},
+  pages={140149},
+  year={2023},
+  publisher={Elsevier}
+}
