--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -774,6 +774,17 @@
   pages={3723},
   year={2002}
 }
+
+@article{frenklach2002method,
+  title={Method of moments with interpolative closure},
+  author={Frenklach, Michael},
+  journal={Chemical Engineering Science},
+  volume={57},
+  number={12},
+  pages={2229--2239},
+  year={2002},
+  publisher={Elsevier}
+}
 @article{zhao2003measurement,
   title={Measurement and numerical simulation of soot particle size distribution functions in a laminar premixed ethylene-oxygen-argon flame},
   author={Zhao, Bin and Yang, Zhiwei and Johnston, Murray V and Wang, Hai and Wexler, Anthony S and Balthasar, Michael and Kraft, Markus},
@@ -2457,6 +2468,17 @@
  year={2022},
  publisher={Elsevier}
 }
+
+@article{shepherd2022measurement,
+  title={Measurement of gas-phase OH radical oxidation and film thickness of organic films at the air--water interface using material extracted from urban, remote and wood smoke aerosol},
+  author={Shepherd, Rosalie H and King, Martin D and Rennie, Adrian R and Ward, Andrew D and Frey, Markus M and Brough, Neil and Eveson, Joshua and Del Vento, Sabino and Milsom, Adam and Pfrang, Christian and others},
+  journal={Environmental Science: Atmospheres},
+  volume={2},
+  number={4},
+  pages={574--590},
+  year={2022},
+  publisher={Royal Society of Chemistry}
+}
 @misc{cantera,
     author = "David G. Goodwin and Harry K. Moffat and Ingmar Schoegl and Raymond L.
               Speth and Bryan W. Weber",
@@ -2537,6 +2559,16 @@
   year    = {2023},
 }
 
+
+@article{ramalli2023automatic,
+  title={Automatic validation and analysis of predictive models by means of big data and data science},
+  author={Ramalli, Edoardo and Dinelli, Timoteo and Nobili, Andrea and Stagni, Alessandro and Pernici, Barbara and Faravelli, Tiziano},
+  journal={Chemical Engineering Journal},
+  volume={454},
+  pages={140149},
+  year={2023},
+  publisher={Elsevier}
+}
 @article{hellmuth2024role,
   title={The role of C3 and C4 species in forming naphthalene in counterflow diffusion flames},
   author={Hellmuth, Maximilian and Langer, Raymond and Meraviglia, Anita and Beeckmann, Joachim and Pitsch, Heinz},
