--- a/Includes/conclusion.tex
+++ b/Includes/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Conclusion}
 
-This work presents omnisoot as a robust computational tool built on Cantera to simulate soot formation coupled with gas-phase chemistry across various combustion and pyrolysis scenarios. Omnisoot integrates four reactor models, two aerosol dynamics models, and four inception and surface growth models, providing a comprehensive platform for analyzing uncertainties in predicting soot yield and morphology originating from chemical kinetics, inception processes, and surface growth rates. The tool was employed to elucidate differences among inception models in shock tubes, flow reactors, and perfectly stirred reactors.
+This work presents Omnisoot as a robust computational tool built on Cantera to simulate soot formation coupled with gas-phase chemistry across various combustion and pyrolysis scenarios. Omnisoot integrates four reactor models, two particle dynamics models, and four inception and surface growth models, providing a comprehensive platform for analyzing uncertainties in predicting soot yield and morphology originating from chemical kinetics, inception processes, and surface growth rates. The tool was employed to elucidate differences among inception models in shock tubes, flow reactors, and perfectly stirred reactors.
 
 Global adjustment factors were applied to inception and surface growth rates to accurately reproduce experimental data for each target scenario across a range of parameters, including temperature, pressure, composition, and flow rates. The performance of inception models was evaluated based on soot yield, morphology, size distribution, inception and surface growth rates, and carbon mass source analysis. Although different inception models predicted similar carbon yields that closely matched experimental observations, they produced varying morphological characteristics. This highlights the importance of characterizing soot morphology to better constrain inception flux and surface growth rate predictions.
 
