--- a/Includes/settings.tex
+++ b/Includes/settings.tex
@@ -17,8 +17,11 @@
 
 \usepackage{colortbl}
 %\usepackage[dvipsnames]{xcolor}
-
+\usepackage{setspace}
 \usepackage{import}
+
+\usepackage[pagewise]{lineno}
+\linenumbers
 
 \makeatletter
 \newcounter{reaction}
