--- a/Includes/submissionguide.tex
+++ b/Includes/submissionguide.tex
@@ -14,4 +14,9 @@
 	\item Dr. José Moran, Assistant professor at University of Ottawa, jose.moran@uottawa.ca
 	\item Dr. Seth Dworkin, Professor at Toronto Metropolitan University, seth.dworkin@torontomu.ca
 	\item Dr. Chiara Saggese, Researcher at Lawrence Livermore National Laboratory, saggese1@llnl.gov
+	\item Dr. Hope Michelsen, Professor at University of Colorado Boulder, hope.michelsen@colorado.edu
+	\item Dr. Benedetta Franzelli, CNRS researcher at EM2C laboratory in Université Paris-Saclay, benedetta.franzelli@centralesupelec.fr
+	\item Dr. Angela Violi, Professor at University of Michigan, avioli@umich.edu
+	\item Dr. Francesco Carbone, Professor at University of Connecticut, carbone@uconn.edu
+	\item Dr. Tiziano Faravelli, Professor at Politecnico di Milano, tiziano.faravelli@polimi.it
 \end{itemize}
